--- a/css/global/footer.css
+++ b/css/global/footer.css
@@ -12,14 +12,15 @@
     padding-bottom: 20px;   
 }
 
-.footer-contato h2{
+.footer-contato p{
     margin-left: 150px;        
 }
 
-.footer-contato h2 {   
-    font-size: 1.5rem;
+.footer-contato p {   
+    font-size: 1.1rem;
     font-family:'Montserrat',sans-serif;
-    font-weight: 400;     
+    font-weight: 400;
+    color: #f8f0a7;  
 }
 
 
@@ -41,7 +42,7 @@
 }
 
 @media (min-width: 1800px) {
-    .footer-contato h2{      
+    .footer-contato p{      
       margin-left: 300px;    
     }
     .footer-redes ul{      
@@ -54,7 +55,7 @@
 }
 
 @media (max-width: 1300px) {
-    .footer-contato h2{      
+    .footer-contato p{      
       margin-left: 60px;    
     }
     .footer-redes ul{      
@@ -63,14 +64,19 @@
 }
 
 @media (max-width: 450px) {
-    .footer-contato h2 {
+    .footer-contato p {
         font-size: 0.8rem;
-        margin-left: 30px;   
+        margin-left: 30px;
+        margin-right: 0px;   
     }
     .footer-redes {      
         align-items: left;        
     }
     .footer-redes li{
-        padding-left: 0;              
+        padding-left: 0;                     
+    }
+    .footer-redes ul{       
+        margin-left: 30px;
+        padding-left: 0px;  
     }
 }    
