--- a/css/global/header.css
+++ b/css/global/header.css
@@ -16,10 +16,12 @@ body {
     padding-bottom: 20px;    
   } 
   
+ 
   .header-menu {
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
+    color: #f8f0a7;
   }
   
   .contato-header {
@@ -31,10 +33,11 @@ body {
     font-size: 1.5rem;
     font-family:'Montserrat',sans-serif;
     font-weight: 400;
-    padding-top: 10px;    
+    
+    color: #f8f0a7;   
   }
 
-  .header-menu {    
+    .header-menu {    
     margin-right: 150px;
   }
 
@@ -44,7 +47,8 @@ body {
     position: relative;
     font-size: 1.1rem;
     font-family:'Roboto',sans-serif;
-    font-weight: 400; 
+    font-weight: 400;
+    color: #f8f0a7; 
   }
   
   .header-menu a:after {
@@ -52,7 +56,7 @@ body {
     display: block;
     height: 2px;
     width: 0px;
-    background: var(--cor-0);
+    background: var(--cor-p1);
     margin-top: 4px;
     transition: 0.3s;
     position: absolute;    
@@ -62,6 +66,7 @@ body {
   .header-menu a.ativo::after {
     width: 100%;
   }
+  
   
 
   @media (min-width: 1800px) {
@@ -87,7 +92,8 @@ body {
   @media (max-width: 800px) {
     .header-menu {
       gap: 20px;
-    }
+    }    
+
     .header-menu a {
       background: var(--cor-8);
       padding: 12px 16px;
