--- a/css/sobre/projetos.css
+++ b/css/sobre/projetos.css
@@ -1,147 +1,144 @@
-.ferramentas-bj {
+.proj-bj {
     background: var(--cor-10);
-    padding-top: 60px;
     /* padding-bottom: 60px;     */
 }
 
-
-.ferramentas-titulo {
+.proj-titulo {
+    padding-top: 60px;
     margin-left: 150px;
+    padding-bottom: 30px;    
 }
 
-.ferramentas-titulo h1 {    
+.proj-titulo h1 {    
     font-size: 2rem;
     font-family:'Montserrat',sans-serif;
     font-weight: 400;
+    color: #f8f0a7;
 }
 
-.ferramentas-links {
+.proj-links {
     display: flex;
     flex-direction: row;
     justify-content: left;  
 }
 
-.ferramentas-links ul {
+.proj-links ul {
     margin-left: 150px;
-    padding-top: 60px; 
-    margin-right: 150px;
+    padding-top: 30px; 
 }
 
-.ferramentas-links ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 0px 40px;   
-}
-
-.ferramentas-links li {
+.proj-links li {
     padding-right: 40px;
     padding-bottom: 60px;
 }
 
-.ferramentas-links a {
+.proj-links a {
     display: flex;
     flex-direction:column;
     justify-content:center;
     text-align: center;
+    color: #f8f0a7;
 }
 
-.ferramentas-links img{
-    padding-bottom: 15px;        
+.proj-links img{
+    padding-bottom: 15px;
     object-fit: cover; 
     max-width: 100%;
-    max-height: 100%;     
+    max-height: 100%;    
 }
 
-.ferramentas-links img:hover {
+.proj-links img:hover {
     transition: all 0.5s;
-    transform: scale(1.1);    
+    transform: scale(1.12);    
 }
 
-.ferramentas-links a:hover {
+.proj-links a:hover {
     transition: all 0.5s;
-    transform: scale(1.1);    
+    transform: scale(1.12);    
 }
+
+
 
 @media (min-width: 1800px) {
-    .ferramentas-titulo {
+    .proj-titulo {
         margin-left: 300px;       
     }
-    .ferramentas-links ul {
+    .proj-links ul {
         margin-left: 300px;
     }    
 }
 
 @media (max-width: 1300px) {
-    .ferramentas-titulo {
+    .proj-titulo {
         margin-left: 60px;       
     }
-    .ferramentas-links ul {
+    .proj-links ul {
         margin-left: 60px;
-        margin-right: 60px;
     }   
 }
 
 @media (max-width: 800px) {
-    .ferramentas-links ul{
+    .proj-links ul{
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 0px 40px;
     }
-    
 }
 
 @media (max-width: 600px) {
-    .ferramentas-links ul{
+    .proj-links ul{
         display: grid;
         grid-template-columns: 1fr;
         gap: 0px 40px;
     }
 }
 
-@media (max-width: 500px) {
-    .ferramentas-titulo h1 {
-        font-size: 1.5rem;
-    }
-    
-    .ferramentas-links a {
-        font-size: 1rem;
-    }  
-
-}
-
 @media (max-width: 450px) {
-    .ferramentas-titulo {
+    .proj-titulo {
         margin-left: 30px;       
     }
-    .ferramentas-links ul {
+    .proj-links ul {
         margin-left: 30px;       
     }   
 }
-    
+
+
 @media (max-width: 450px) {
-   
-    .ferramentas-titulo h1 {
+    .proj-titulo h1 {
         font-size: 1.1rem;
     }
-    .ferramentas-links {    
+    .proj-links{    
         max-width: 75%;
         max-height: 75%;                      
-    }   
-    .ferramentas-links a {
+    }
+    .proj-links a {
         font-size: 0.8rem;
-    }  
+    }
+
+    .proj-bj  {        
+        padding-bottom: 0px;
+        padding-top: 0px;
+    } 
+    .proj-titulo h1  {        
+        padding-bottom: 0px;
+        padding-top: 0px;
+    }
+    .proj-links li {
+        padding-bottom: 30px;
+    }
+    .proj-links ul {
+        padding-bottom: 30px;
+    }       
 }
 
 @media (max-width: 300px) {
-    .ferramentas-titulo h1 {
+    .proj-titulo h1 {
         font-size: 1rem;
     }    
-    .ferramentas-links a {
+    .proj-links a {
         font-size: 0.6rem;
     }    
 }
-
-
 
 
 
