--- a/css/home/home.css
+++ b/css/home/home.css
@@ -138,6 +138,16 @@
     padding-bottom:60px;
 }
 
+.botao-sobre { 
+    margin-right: 150px;
+    margin-left: 150px;
+    display: grid;    
+    grid-template-columns: 1fr 1fr;
+    align-content: start;
+    padding-bottom: 60px; 
+    
+}
+
 /* servico */
 
 .servico-home {
@@ -199,6 +209,22 @@
     margin-left: 80px;
 }
 
+.p-chamada-servico {
+    display: flex;
+    flex-direction:column;
+    justify-content:center;
+    text-align: center;
+    align-self: center;   
+    
+    margin-bottom: 30px;
+    color: #abab9a;
+    font-size: .9rem;
+    font-family:'roboto',sans-serif;
+    font-weight: 400;    
+    
+    
+}
+
 @media (min-width: 1800px) {
     /* divisoria */
 
@@ -228,6 +254,16 @@
     margin-right: 300px;
     margin-left: 300px;        
 }
+
+/* botao */
+
+.botao-sobre { 
+    margin-right: 300px;
+    margin-left: 300px;
+    display: grid;    
+    
+}
+
 
 
 
@@ -285,6 +321,15 @@
 .servico-home-conteudo h2 {
     margin-right: 40px;
     margin-left: 40px;
+}
+
+/* botao */
+
+.botao-sobre { 
+    margin-right: 60px;
+    margin-left: 60px;
+      
+    
 }
 
 
@@ -440,6 +485,8 @@
 
 
 
+
+
 .home-intro img {
     max-width: 70%;     
 }
@@ -448,6 +495,14 @@
    
     font-size: 1.5rem;
    
+}
+
+/* botao */
+
+.botao-sobre { 
+    font-size: 1rem;
+    max-width: 150px;  
+    
 }
 
 
@@ -496,6 +551,16 @@
     margin-left: 20px;
     font-size: 0.8rem;
     
+}
+
+/* botao */
+
+.botao-sobre { 
+    margin-right: 30px;
+    margin-left: 30px;
+    font-size: 0.8rem;  
+    max-width: 75px;
+    width: 50px; 
 }
 
 /* ferramentas  */
