--- a/css/sobre/intro.css
+++ b/css/sobre/intro.css
@@ -28,8 +28,8 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    text-align: left;   
-    
+    text-align: left;
+    padding-bottom: 0px;    
 
 }
 
@@ -57,7 +57,8 @@
     font-family:'Montserrat',sans-serif;
     font-weight: 400;
     width: 13ch;
-    color: #f8f0a7;  
+    color: #f8f0a7;
+    padding-top: 0px;   
 }
 
 .intro-img { 
@@ -65,15 +66,14 @@
     flex-direction:row;
     justify-content: left;
     margin-left: 200px;   
-    margin-right: 150px;                        
+    margin-right: 150px;
+                            
 }
 
 .intro-img img {    
-    object-fit: cover; 
-    /* width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;               */
+    object-fit: cover;
+    padding-right: 30px; 
+                 
 }
 
 
