--- a/css/home/home.css
+++ b/css/home/home.css
@@ -483,6 +483,17 @@
     
 }
 
+.p-chamada-servico {
+    text-align:left;    
+    margin-right: 80px;
+    margin-left: 80px;
+    
+    
+}
+
+
+
+
 
 
 
@@ -547,20 +558,26 @@
     
 
 .citacao-home p {
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
     font-size: 0.8rem;
     
 }
 
 /* botao */
 
-.botao-sobre { 
-    margin-right: 30px;
-    margin-left: 30px;
+.botao-home { 
+    
     font-size: 0.8rem;  
-    max-width: 75px;
-    width: 50px; 
+    /* max-width: 75px; */
+    /* width: 50px;  */
+}
+
+.botao-sobre { 
+   
+    font-size: 0.8rem;  
+    /* max-width: 75px;
+    width: 50px;  */
 }
 
 /* ferramentas  */
@@ -595,10 +612,18 @@
 /* botao */
 
 .botao-home {
-    margin-left: 60px;
+    margin-left: 50px;
 }
 
 .botao-home a {
+    font-size: 0.8rem;
+}
+
+.botao-sobre {
+    margin-left: 30px;
+}
+
+.botao-sobre a {
     font-size: 0.8rem;
 }
 
@@ -611,6 +636,8 @@
 .servico-home-conteudo {
     margin-right: 30px;
     margin-left: 30px;
+    padding-bottom: 0px;
+    padding-top: 0px;
      
 }
 
@@ -621,22 +648,30 @@
 .servico-home-titulo h1 {
     padding-bottom: 30px;
     font-size: 1.5rem;
-    margin-left: 70px;
+    margin-left: 60px;
     
 }
 
 .servico-home-conteudo h2 {
     
     font-size: 1.1rem;
-    margin-left: 40px;  
-    margin-right: 40px;  
+    margin-left: 30px;  
+    margin-right: 30px;  
 }
 
 .servico-home-conteudo p {
     font-size: 0.8rem;
-    margin-right: 40px;
-    margin-left: 40px;
+    margin-right: 30px;
+    margin-left: 30px;
 }    
+
+.p-chamada-servico {
+    text-align:left;    
+    margin-right: 60px;
+    margin-left: 60px;
+    
+    
+}
 
 }
 
