--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 @import "./contatos/contatos.css";
 
 /* proj por tecnologias */
-@import "./proj-por-tech/proj-fig-xd.css";
+@import "./proj-por-tech/proj.css";
 
 /* proj-pg */
 @import "./proj-pg/proj-pg.css";
