--- a/css/proj-por-tech/proj.css
+++ b/css/proj-por-tech/proj.css
@@ -18,6 +18,7 @@
 
 .tech-titulo {
     margin-left: 150px;
+    margin-right: 120px;
     padding-top: 60px;    
     padding-bottom: 30px;
 }
@@ -29,6 +30,20 @@
     padding-top: 60px;
     padding-bottom: 60px;
     color: #f8f0a7;
+}
+
+.tech-titulo p {
+    max-width: 90ch;
+ }
+
+
+
+tech-texto p {
+    font-size: 1.1rem;
+    font-family:'Roboto',sans-serif;
+    font-weight: 400;   
+    padding-bottom: 30px;    
+    
 }
 
 .tech-programas ul{
@@ -148,6 +163,7 @@
 @media (min-width: 1800px) {
     .tech-titulo {
         margin-left: 300px;
+        margin-right: 260px;
     }
 
     .projetos-lista ul {
@@ -156,7 +172,15 @@
     .divisoria-pg {    
         margin-right: 150px;
         margin-left: -50px;
-    }  
+    }
+    
+    .tech-titulo p {
+        max-width: 100ch;
+     }
+    
+    
+
+
 
 }
 
@@ -164,6 +188,7 @@
 @media (max-width: 1300px) {
     .tech-titulo {
         margin-left: 60px;
+        margin-right: 60px;
     }
 
     .tech-titulo h1 {
@@ -195,6 +220,7 @@
     .tech-titulo {
         padding-top: 30px;  
         margin-left: 30px;
+        margin-right: 30px;
     }
 
     .tech-titulo h1 {
